# resonance

./: .env.example  .gitignore  Cargo.toml  PLAN-lyrics.md  PLAN-player-enhancements.md  PLAN-scrobbling.md  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_scrobbling.sql  003_updater.sql  004_platform_import.sql
backend/src/: db.rs  handlers.rs  importer.rs  lib.rs  lyrics.rs  main.rs  models.rs  scanner.rs  scrobble.rs  updater.rs
docker/: Dockerfile  docker-compose.yml
frontend/: capacitor.config.ts  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/android/: gradlew  gradlew.bat  settings.gradle
frontend/android/app/: build.gradle  proguard-rules.pro
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
frontend/android/app/src/main/res/values/: strings.xml  (+1 more)
frontend/ios/App/: ExportOptions.plist  project.yml
frontend/ios/App/App/: AppDelegate.swift  BackendServer.swift  Info.plist  Resonance-Bridging-Header.h  ViewController.swift
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Cards.tsx  FileBrowser.tsx  Header.tsx  LyricsPanel.tsx  MiniPlayer.tsx  NowPlaying.tsx  QueuePanel.tsx  SearchModal.tsx  Sidebar.tsx  TrackList.tsx  UpdateBanner.tsx
frontend/src/lib/: api.ts  audio-engine.ts  utils.ts
frontend/src/pages/: AlbumsPage.tsx  ArtistsPage.tsx  EqualizerPage.tsx  FoldersPage.tsx  GenresPage.tsx  HomePage.tsx  ImportPage.tsx  LibraryPage.tsx  MusicToolsPage.tsx  PlaylistToolsPage.tsx  PlaylistsPage.tsx  SettingsPage.tsx  StatsPage.tsx  TransferPage.tsx
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
installer/: build-appimage.sh  build-dmg.sh  windows.iss
scripts/: install-android.sh  install-ios.md  install-linux.sh  install-macos.sh  install-windows.ps1
(+3 files in other folders)
