[workspace]
members = ["backend"]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-ws = "0.3"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
lofty = "0.21"
symphonia = { version = "0.5", features = ["all"] }
notify = "7"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
rayon = "1.10"
dashmap = "6"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
urlencoding = "2"
